--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,8 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.show-sql = true
 #spring.jpa.hibernate.use-new-id-generator-mappings= false
+
+# App Properties
+bookcrossing.jwtSecret= bookcrossingSecretKey
+# 5 minutes duration by default: 5 minutes * 60 seconds * 1000 miliseconds
+bookcrossing.jwtExpirationMs= 300000
