--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,15 @@ spring.jpa.show-sql = true
 bookcrossing.jwtSecret= bookcrossingSecretKey
 # 5 minutes duration by default: 5 minutes * 60 seconds * 1000 miliseconds
 bookcrossing.jwtExpirationMs= 300000
+
+spring.mail.protocol=smtp
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=malawrednadywersantka@gmail.com
+spring.mail.password=Oleczka@2
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.auth=true
+#spring.mail.properties.mail.smtp.starttls.required=true
+#spring.mail.properties.mail.smtp.connectiontimeout=5000
+#spring.mail.properties.mail.smtp.timeout=5000
+#spring.mail.properties.mail.smtp.writetimeout=5000
